# agent-factory

./: .env.example  .env.production  .gitattributes  .gitignore  AGENTS.md  ATLAS_SCHEMA_AND_AGENTIC_ENHANCEMENT.md  Agent_factory_step_by_step.md  BACKLOG_CLEANUP_SUMMARY.md  BOB_CAPABILITIES.md  CHANGELOG.md  CHAT_USAGE.md  CLAUDEUPDATE.md  CONTRIBUTING.md  CURRENT_STATE.md  DECISIONS_LOG.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_FINAL.md  DEPLOYMENT_COMPLETE_README.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_TODO.md  DEPLOY_NOW.md  DEVELOPMENT_LOG.md  Dockerfile  E2E_TEST_RESULTS.md  GITHUB_SECRETS_SETUP.md  HOSTINGER_VPS_DEPLOYMENT.md  INTERACTIVE_WIZARD_DEMO.md  ISSUES_LOG.md  KB_STATUS.md  Knowledge.md  LIBRARIES.md  LICENSE  MARKET_RESEARCH_AGENT_INSTRUCTIONS.md  MASTER_ROADMAP.md  MVP_ROADMAP.md  NEXT_ACTIONS.md  ONBOARDING_IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  (+79 more)
.claude/: settings.local.json
.claude/commands/: context-load.md  start-rag-phase.md
.claude/hooks/: config.yml  (+1 more)
.githooks/: pre-push
.github/: GITHUB_SETUP.md
.memory/: DEVELOPMENT_LOG.md  NEXT_ACTIONS.md  PROJECT_CONTEXT.md
Guides for Users/: AGENT_EDITING_GUIDE.md  BOT_DEPLOYMENT_GUIDE.md  CLAUDEUPDATE_APPLIED.md  OLLAMA_SETUP_COMPLETE.md  POETRY_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  QUICK_START_24_7.md  README.md  TELEGRAM_AUTO_START_GUIDE.md  TELEGRAM_BOT_100_PERCENT_RELIABLE.md  TELEGRAM_KB_INTEGRATION.md
agent_command_ui/: package-lock.json  package.json  tailwind.config.js
agent_factory/: __init__.py  cli.py  cli_builder.py
agents/: agent_name_v1_0.py
backlog/: BOARD_EXPORT.md  README.md  config.yml
dashboard_api/: main.py
data/: pipeline_test_results.json
datasets/: golden_dataset.jsonl  golden_from_supabase.jsonl
deploy/: deploy_rivet_pro.sh  push_urls_to_vps.ps1  sync-api-keys.ps1
docs/: 00_api_design.md  00_architecture_platform.md  00_business_model.md  00_competitive_analysis.md  00_database_schema.md  00_gap_analysis.md  00_platform_roadmap.md  00_repo_overview.md  00_tech_stack.md  ARCHITECTURE_CORRECTION.md  ATOM_SPEC_UNIVERSAL.md  CHANNEL_STYLE_GUIDE.md  DEVOPS_STATUS.md  FIELD_EYE_DEPLOYMENT.md  FIELD_EYE_GUIDE.md  GITHUB_ISSUE_AUTOMATION.md  Gemini_CLI_Integration_Guide.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_PHASE2.md  PERPLEXITY_CITATION_IMPLEMENTATION.md  PHASE3_SPEC.md  PHASE4_SPEC.md  PHASE5_DEPLOYMENT_GUIDE.md  PHASE5_SPEC.md  PROJECT_HISTORY.md  QUICK_START_FREE_LLM.md  README_CORRECTED.md  TELEGRAM_OBSERVABILITY_IMPLEMENTATION.md  TEST_SUMMARY.md  supabase_complete_schema.sql
examples/: __init__.py  embedder.py  formatter.py  integration.py  openhands_ollama_demo.py  perplexity_citation_demo.py  pr_creator_demo.py  retriever.py  schemas.py  solve_issue_demo.py  store.py  thumbnail_demo.py  youtube_auth_setup.md  youtube_auth_setup.py  youtube_uploader_demo.py
migrations/: 002_conversation_states.sql  003_rivet_backend_schema.sql  004_kb_weakness_tracking.sql  cmms_schema_sqlite.sql
scripts/: auto_generate_video.py  check_bot_health.bat  check_ingestion_tables.py  check_memory.py  check_tables.py  deploy_feedback_migration.py  deploy_feedback_simple.py  deploy_ingestion_to_neon.py  deploy_multi_provider_schema.py  deploy_neon_direct.py  deploy_supabase_complete.py  deploy_supervisor_schema.py  export_golden_dataset.py  kb_seed_urls.py  load_session.py  migrate_settings.py  migrate_supabase.py  phoenix_monitor_standalone.py  rivet_worker_parallel.py  run_enrichment_migration.py  run_migration.py  run_migration.sh  run_migration_003.py  run_observability_migration.py  run_telegram_bot.py  save_session.py  save_session_devops.py  start_enrichment_worker.py  start_phoenix.py  start_telegram_bot.bat  stop_telegram_bot.bat  test_kb_weakness_detection.py  update_readme.py  update_readme_metrics.py  upload_atoms_to_neon.py  upload_atoms_to_supabase.py  validate_seo_agent.py  validate_supabase_schema.py  validate_vision.py  verify_ingestion_tables.py  (+1 more)
specs/: DYNAMIC_FEWSHOT_RAG_SPEC.md  RAG_SETUP_COMPLETE.md  template.md
sprint/: API_CONTRACTS.md  API_ENDPOINTS.md  BLOCKERS.md  CLAUDE_SHARED.md  CONSOLIDATED_TAB2_FRONTEND.md  CONSOLIDATED_TAB3_BOT.md  FASTAPI_STRIPE_SETUP.md  FINAL_3TAB_OVERVIEW.md  FINAL_TAB1_BACKEND.md  FINAL_TAB2_FRONTEND.md  FINAL_TAB3_BOT.md  INTEGRATION_GUIDE.md  MULTI_LAPTOP_SETUP.md  PARALLEL_SPRINT_MASTER.md  QUICKSTART.md  SESSION_SUMMARY.md  STATUS_BOARD.md  STATUS_WS2.md  STATUS_WS3.md  WORKSTREAM_PROMPTS.md  WS1_ATLAS_PROMPT.md  WS2_LANDING_PROMPT.md  WS2_LANDING_PROMPT_NO_STRIPE.md  WS3_VOICE_PROMPT.md  WS4_PRINT_PROMPT.md  WS5_INTENT_PROMPT.md  WS6_INTEGRATION_PROMPT.md
sql/: ADD_CITATIONS_COLUMN.sql
tests/: benchmark_ocr_performance.py  conftest.py  debug_failure.py  test_agent_name_v1_0.py  test_backend.py  test_cache.py  test_callbacks.py  test_context_extractor.py  test_database_failover.py  test_database_manager.py  test_factory.py  test_factoryio_tools.py  test_file_tools.py  test_learning_loop_integration.py  test_machine_state_manager.py  test_observability.py  test_ocr_integration.py  test_platform_config.py  test_platform_types.py  test_route_c_performance.py  test_telegram_onboarding.py  test_youtube_uploader_agent.py
(+405 files in other folders)
